workx-rs/tui/src/chatwidget/snapshots/workx_tui__chatwidget__tests__workspace_owner_limit_state_messages.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "rendered_cases.join(\"\\n---\\n\")"
---
■ You're out of credits. Your workspace is out of credits. Add credits to continue using Workx.

---
■ Usage limit reached. You've reached your usage limit. Increase your limits to continue using workx.
